// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSplitButtonControl is rendered 1`] = `
<div
  class="ouiSplitButtonControl ouiSplitButtonColor--primary"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
    data-test-subj="splitButton--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      >
        Test
      </span>
    </span>
  </button>
  <button
    aria-label="Open Selections"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    data-test-subj="splitButton--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl is rendered without dropdown 1`] = `
<div
  class="ouiSplitButtonControl ouiSplitButtonColor--primary"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
    data-test-subj="splitButton--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      >
        Test
      </span>
    </span>
  </button>
</div>
`;

exports[`OuiSplitButtonControl props fullWidth is rendered 1`] = `
<div
  class="ouiSplitButtonControl ouiSplitButtonColor--primary"
>
  <button
    class="ouiButton ouiButton--primary ouiButton--fullWidth ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
    data-test-subj="splitButton--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      >
        Test
      </span>
    </span>
  </button>
  <button
    aria-label="Open Selections"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    data-test-subj="splitButton--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props isLoading is rendered 1`] = `
<div
  class="ouiSplitButtonControl ouiSplitButtonColor--primary"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl ouiSplitButtonControl--primary ouiSplitButtonHairline--primary"
    data-test-subj="splitButton--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      >
        Test
      </span>
    </span>
  </button>
  <button
    aria-label="Open Selections"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    data-test-subj="splitButton--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;
